<resources>
    <string name="app_name">Vin Vidya Staff</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_attendance">Attendance</string>
    <string name="title_activity_day_to_day">Day To Day</string>
    <string name="title_activity_home_work">Home Work</string>
    <string name="title_activity_home_work_feed_back">Home Work Feed Back</string>
    <string name="title_activity_time_table">Time Table</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_notice">NoticeActivity</string>
    <string name="title_activity_set_exam_schedule">SetExamScheduleActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_exam_schedule">ExamScheduleActivity</string>
    <string name="title_activity_exam_syllabus">ExamSyllabusActivity</string>
    <string name="title_activity_exam_marks">ExamMarksActivity</string>
    <string name="title_activity_exam_section">ExamSectionActivity</string>
    <string name="title_activity_notice_board">NoticeBoardActivity</string>
    <string name="title_activity_parent_note">ParentNoteActivity</string>
    <string name="title_activity_teachers">TeachersActivity</string>
    <string name="title_activity_staff_reminder">StaffReminderActivity</string>
    <string name="title_activity_others">OthersActivity</string>
    <string name="title_activity_events">EventsActivity</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="title_activity_syllabus">SyllabusActivity</string>
    <string name="title_activity_gallery_detailes">GalleryDetailesActivity</string>
    <string name="action_profile">Profile</string>
    <string name="action_changePassword">Change Password</string>
    <string name="action_logOut">Logout</string>
    <string name="action_aboutUs">About Us</string>
    <string name="action_selectAll">Select</string>
    <string name="title_activity_subject_syllabus">SubjectSyllabusActivity</string>
    <string name="title_activity_student_list">Student List</string>
    <string name="title_activity_give_hm_wrk_fb">Give Home Work Feedback</string>
    <string name="title_activity_put_attendance">PutAttendanceActivity</string>
    <string name="title_activity_teacher_note">TeacherNoteActivity</string>
    <string name="title_activity_reminder">ReminderActivity</string>
    <string name="title_activity_student_reminder">StudentReminderActivity</string>
    <string name="title_activity_stud_reminder">StudReminderActivity</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="title_activity_staff_note">StaffNoteActivity</string>
    <string name="title_activity_student_note">StudentNoteActivity</string>
    <string name="title_activity_time_tbl">TimeTblActivity</string>
    <string name="title_activity_staff_time_table">StaffTimeTableActivity</string>
    <string name="key_Password">Password</string>
    <string name="key_name">name</string>
    <string name="key_userName">userName</string>
    <string name="key_password">password</string>
    <string name="key_email">email</string>
    <string name="key_mobileNumber">mobileNumber</string>
    <string name="key_userData">userData</string>
    <string name="key_ClassId">ClassId</string>
    <string name="key_DayId">DayId</string>
    <string name="key_SchoolId">SchoolId</string>
    <string name="key_StudentAttendenceId">StudentAttendenceId</string>
    <string name="key_SubjectId">SubjectId</string>
    <string name="key_Select_one">Select one</string>
    <string name="key_Subject">Subject</string>
    <string name="key_Title">Title</string>
    <string name="key_Scholastics">Scholastics</string>
    <string name="key_OperationName">OperationName</string>
    <string name="key_Class">class</string>
    <string name="key_Absentees_cnt">Absentees_cnt</string>
    <string name="key_Syllabus">Syllabus</string>
    <string name="key_Assignment">Assignment</string>
    <string name="key_AssignmentId">AssignmentId</string>
    <string name="key_Assignment_id">Assignment_id</string>
    <string name="key_Clas">Class</string>
    <string name="key_Cls_Section">Cls_Section</string>
    <string name="key_syllabus_details">Syllabus Details</string>
    <string name="key_otherData">otherData</string>
    <string name="key_AcademicYearId">AcademicYearId</string>
    <string name="key_classSubjectData">classSubjectData</string>
    <string name="key_Status">Status</string>
    <string name="key_Success">Success</string>
    <string name="key_Fail">Fail</string>
    <string name="key_Failure">Failure</string>
    <string name="key_Alert">Alert</string>
    <string name="key_Result">Result</string>
    <string name="key_Set_Roll">Set Roll</string>
    <string name="key_NoticeTitle">NoticeTitle</string>
    <string name="key_NoteTitleName">NoteTitleName</string>
    <string name="key_Notice">Notice</string>
    <string name="key_NoticeCreatedDate">NoticeCreatedDate</string>
    <string name="key_NoticeDate">NoticeDate</string>
    <string name="key_StaffId">StaffId</string>
    <string name="key_App">App</string>
    <string name="key_StaffReportId">StaffReportId</string>
    <string name="key_UserToken">UserToken</string>
    <string name="key_DeviceId">DeviceId</string>
    <string name="key_NoticeId">NoticeId</string>
    <string name="key_Id">Id</string>
    <string name="key_noticeBoardData">noticeBoardData</string>
    <string name="key_fromDate">fromDate</string>
    <string name="key_toDate">toDate</string>
    <string name="key_Section">Section</string>
    <string name="key_examData">examData</string>
    <string name="key_ExamId">ExamId</string>
    <string name="key_SyllabusId">SyllabusId</string>
    <string name="key_ReportId">ReportId</string>
    <string name="key_Exam">Exam</string>
    <string name="key_IsWorkBookExam">IsWorkBookExam</string>
    <string name="key_Date">Date</string>
    <string name="key_IsSyllabusSet">IsSyllabusSet</string>
    <string name="key_FromDate">FromDate</string>
    <string name="key_ToDate">ToDate</string>
    <string name="key_homeworkData">homeworkData</string>
    <string name="key_reportingData">reportingData</string>
    <string name="key_chapterName">ChapterName</string>
    <string name="key_get_Student_List"> Get Student List</string>
    <string name="key_HomeWork">HomeWork</string>
    <string name="key_Day">Day</string>
    <string name="key_Month">Month</string>
    <string name="key_eventtitle">eventtitle</string>
    <string name="key_eventId">eventId</string>
    <string name="key_EventDescription">EventDescription</string>
    <string name="key_eventDate">eventDate</string>
    <string name="key_EventVenue">EventVenue</string>
    <string name="key_StartTime">StartTime</string>
    <string name="key_StaffName">StaffName</string>
    <string name="key_ReminderTitle">ReminderTitle</string>
    <string name="key_ReminderOtherTitle">ReminderOtherTitle</string>
    <string name="key_ReminderTitleName">ReminderTitleName</string>
    <string name="key_Reminder">Reminder</string>
    <string name="key_ReminderDate">ReminderDate</string>
    <string name="key_ReminderSetDate">ReminderSetDate</string>
    <string name="key_Attendance">Attendance</string>
    <string name="key_Put_Attendance">Put Attendance</string>
    <string name="key_home_work_feedback">Homework Feedback</string>
    <string name="key_View_Current_Attendance">View Current Attendance</string>
    <string name="key_View_Attendance_By_Date">View Attendance By Date</string>
    <string name="key_Student_Leave_List">Student Leave List</string>
    <string name="key_Time_Table">Time Table</string>
    <string name="key_Class_Wise_Time_Table">Class Wise Time Table</string>
    <string name="key_Staff_Wise_Time_Table">Staff Wise Time Table</string>
    <string name="key_my_Time_Table">My Time Table</string>
    <string name="key_Home_Work_Feedback">Home Work Feedback</string>
    <string name="key_Day_Report">Day Report</string>
    <string name="key_Give_Home_Work_Feedback">Give Home Work Feedback</string>
    <string name="key_View_Current_Home_Work_Feedback">View Current Home Work Feedback</string>
    <string name="key_Write_Report">Write Report</string>
    <string name="key_Staffwise_Report">Staffwise Report</string>
    <string name="key_My_Report">My Report</string>
    <string name="key_Classwise_report">Classwise report</string>
    <string name="key_View_Home_Work_Feedback_By_Date">View Home Work Feedback By Date</string>
    <string name="key_Home_Work">Home Work</string>
    <string name="key_Give_Home_Work">Give Home Work</string>
    <string name="key_View_Home_Work">View Home Work</string>
    <string name="key_View_Home_Work_By_Date">View Home Work By Date</string>
    <string name="key_Exam_Marks">Exam Marks</string>
    <string name="key_Set_Exam_Marks">Set Exam Marks</string>
    <string name="key_Current_Exam_Marks">Current Exam Marks</string>
    <string name="key_Exam_Marks_By_Exam">Exam Marks By Exam</string>
    <string name="key_Exam_Schedule">Exam Schedule</string>
    <string name="key_class_wise_Schedule">Class wise Schedule By Exam</string>
    <string name="key_Set_Exam_Schedule">Set Exam Schedule</string>
    <string name="key_my_Exam_Schedule">My Exam Schedule</string>
    <string name="key_Exam_Section">Exam Section</string>
    <string name="key_Exam_Syllabus">Exam Syllabus</string>
    <string name="key_class_wise_syllabus">Class Wise Syllabus</string>
    <string name="key_Set_Exam_Syllabus">Set Exam Syllabus</string>
    <string name="key_my_subject">My Subject</string>
    <string name="key_Chapter">Chapter</string>
    <string name="key_CurrentData">CurrentData</string>
    <string name="key_Report">Report</string>
    <string name="key_ReportSentDate">ReportSentDate</string>
    <string name="key_Description">Description</string>
    <string name="key_Filename">Filename</string>
    <string name="key_File_path">File_path</string>
    <string name="key_FilePath">FilePath</string>
    <string name="key_description">description</string>
    <string name="key_Download">Download</string>
    <string name="key_ReasonTitle">ReasonTitle</string>
    <string name="key_Message">Message</string>
    <string name="key_Roll_Set">Roll_Set</string>
    <string name="key_resId">resId</string>
    <string name="key_resultId">resultId</string>
    <string name="key_ResultId">ResultId</string>
    <string name="key_ResultSet">ResultSet</string>
    <string name="key_VersionCode">VersionCode</string>
    <string name="key_ExamOnDate">ExamOnDate</string>
    <string name="key_SetDate">SetDate</string>
    <string name="key_EditDate">EditDate</string>
    <string name="key_SetBy">SetBy</string>
    <string name="key_SentBy">SentBy</string>
    <string name="key_NoteSetDate">NoticeSetDate</string>
    <string name="key_Image">Image</string>
    <string name="key_homeworkDate">homeworkDate</string>
    <string name="key_RollNo">RollNo</string>
    <string name="key_Roll_No">Roll No</string>
    <string name="key_Total">Total</string>
    <string name="key_Overall_Grade">Overall_Grade</string>
    <string name="key_Has_Overall_Grade">Has_Overall_Grade</string>
    <string name="key_MaxTotal">MaxTotal</string>
    <string name="key_Percentage">Percentage</string>
    <string name="key_TotalGrade">TotalGrade</string>
    <string name="key_StudentName">StudentName</string>
    <string name="key_FeedbackDate">FeedbackDate</string>
    <string name="key_Del">Del</string>
    <string name="key_Edt">Edit</string>
    <string name="key_Sylbs">Sylbs</string>
    <string name="key_Marks">Marks</string>
</resources>