<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.vinuthana.vinvidyaadmin.activities.useractivities.LoginActivity">
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/action_profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_changePassword"
        android:orderInCategory="100"
        android:title="@string/action_changePassword"
        app:showAsAction="never" />
    <!--<item
        android:id="@+id/action_aboutUs"
        android:orderInCategory="100"
        android:title="@string/action_aboutUs"
        app:showAsAction="never" />-->
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logOut"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
