<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/crdExamScdlBlwKitKat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:contentPadding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvExamExmScheduleBlwKitKat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="Exam"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tvSubjectExmScheduleBlwKitKat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="Subject"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tvDateExmScheduleBlwKitKat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="Date"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tvClassExmScheduleBlwKitKat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="Class"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lytForExmSchduleBlwKitKat"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_below="@+id/tvNtcNote"
                android:layout_marginTop="20dp">
                <Button
                    android:id="@+id/btnEditExmScheduleBlwKitKat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1.5"
                    android:paddingRight="5dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="#4CAF50"
                    android:text="@string/key_Edt"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18dp"/>
                <Button
                    android:id="@+id/btnSyllabusExamScduleBlwKitKat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="#cd036ce5"
                    android:text="@string/key_Sylbs"
                    android:paddingRight="5dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_weight="1.5"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18dp"/>
                <Button
                    android:id="@+id/btnDeleteExmScheduleBlwKitKat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FF8C00"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:paddingRight="5dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/key_Del"
                    android:visibility="gone"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18dp"/>
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>
