<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:contentPadding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvExamExmSyllabus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="Exam"
                android:textColor="@color/colorPrimary"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tvExamExmDtTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="Exam Time"
                android:textColor="@color/colorPrimary"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tvSubjectExmSyllabus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="Subject"
                android:textColor="@color/colorPrimary"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tvClassExmSyllabus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="Class"
                android:textColor="@color/colorPrimary"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tvSyllabusExmSyllabus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="Syllabus"
                android:textColor="@color/colorPrimary"
                android:textSize="18dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lytForExmSyllabus"
                android:orientation="horizontal"
                android:weightSum="2"

                android:layout_marginTop="20dp">
                <Button
                    android:id="@+id/btnEditExmSyllabus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/edit_btn_shape"
                    android:text="@string/key_Edt"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18dp"/>
                <Button
                    android:id="@+id/btnEnteMarksSyllabus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/feedback_btn_shape"
                    android:text="@string/key_Marks"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18dp"/>
                <Button
                    android:id="@+id/btnDeleteExmSyllabus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/delete_btn_shape"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:visibility="gone"
                    android:layout_weight="1"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="15dp"
                    android:text="@string/key_Del"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18dp"/>
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
